背景色追加

--- a/default_page.html
+++ b/default_page.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://unpkg.com/98.css" />
     <style>
+        body {
+            background: #008080;
+        }
         .popup_window {
             position: absolute;
             top: 50%;
