--- a/default_page.html
+++ b/default_page.html
@@ -21,11 +21,12 @@
         #window_hint {
             display: none;
         }
+
         .group-button {
             text-align: right;
         }
         
-        <!--Drag and Drop-->
+        /* Drag and Drop */
         .drag-and-drop {
             cursor: move;
             position: absolute;
