--- a/maintenance.html
+++ b/maintenance.html
@@ -10,6 +10,56 @@
     padding: 0;
     font-family: 'Noto Sans JP', sans-serif;
     overflow: hidden;
+    animation: fadeIn ease 1s;
+    -webkit-animation: fadeIn ease 1s;
+    -moz-animation: fadeIn ease 1s;
+    -o-animation: fadeIn ease 1s;
+    -ms-animation: fadeIn ease 1s;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-moz-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-o-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-ms-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 
   .container {
@@ -47,46 +97,44 @@
   }
 
   .background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 120vw; /* 画面の横幅に合わせる */
-  height: 120vh; /* 画面の高さに合わせる */
-  z-index: 0;
-  overflow: hidden; /* 画面外の画像を隠す */
-}
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 120vw; /* 画面の横幅に合わせる */
+    height: 120vh; /* 画面の高さに合わせる */
+    z-index: 0;
+    overflow: hidden; /* 画面外の画像を隠す */
+  }
 
-.background img {
-  position: absolute;
-  top: -10vh;
-  left: -10vw;
-  width: auto;
-  height: auto;
-  min-width: 100%;
-  min-height: 100%;
-}
+  .background img {
+    position: absolute;
+    top: -10vh;
+    left: -10vw;
+    width: auto;
+    height: auto;
+    min-width: 100%;
+    min-height: 100%;
+  }
 
   /* 追加された部分 */
-  .sns-link {
-    margin-top: 10px;
-    margin-bottom: 3rem;
-    display: flex;
-    justify-content: space-around;
-  }
-
-  .sns-link a {
-    display: inline-block;
+  .fab {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
     background-color: #ff6699;
     color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: background-color 0.3s ease;
-    min-width: 10em;
-    box-sizing: border-box; /* パディングも含めたボタンの幅を設定 */
   }
 
-  .sns-link a:hover {
+  .fab:hover {
     background-color: #ff3366;
   }
 </style>
@@ -106,6 +154,11 @@
       <a href="#" id="simkey">simkey.net</a>
       <a href="#" id="misskey_io">misskey.io</a>
     </div>
+  </div>
+
+  <!-- 追加された部分 -->
+  <div class="fab" onclick="window.location.reload();">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10h-2c0 4.41-3.59 8-8 8s-8-3.59-8-8 3.59-8 8-8V2z"/></svg>
   </div>
 
   <script>
