リソース追加、スタイル微修正

--- a/maintenance.html
+++ b/maintenance.html
@@ -137,6 +137,13 @@
   .fab:hover {
     background-color: #ff3366;
   }
+
+  .fab img {
+    width: 24px;
+    height: 24px;
+    /*グレーにするカラーフィルター*/
+    filter: invert(90%);
+  }
 </style>
 </head>
 <body>
@@ -158,7 +165,8 @@
 
   <!-- 追加された部分 -->
   <div class="fab" onclick="window.location.reload();">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10h-2c0 4.41-3.59 8-8 8s-8-3.59-8-8 3.59-8 8-8V2z"/></svg>
+    <!--reload.svg読み込み-->
+    <img src="reload.svg" alt="Reload" width="24" height="24">
   </div>
 
   <script>
