--- a/maintenance.html
+++ b/maintenance.html
@@ -67,7 +67,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 10%);
     width: 75%;
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.8);
@@ -211,6 +211,6 @@
     });
   </script>
   <!-- ChatGPTとBingAIが作成 -->
-  <p style="position: fixed; bottom: 10px; left: 10px;">Created by ChatGPT and BingAI</p>
+  <p style="position: fixed; bottom: 10px; left: 20px; background-color: #ff6699; padding: 1rem; color: #F0F0F0; max-width: 60%; border-radius: 12px;">ほぼChatGPTとBingAIがつくってくれたメンテナンスページ</p>
 </body>
 </html>
