--- a/maintenance.html
+++ b/maintenance.html
@@ -5,13 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700&display=swap" rel="stylesheet">
 <title>メンテナンス中</title>
 <style>
+
   body {
     margin: 0;
     padding: 0;
-    font-family: 'Noto Sans JP', sans-serif;
+    /*font-family: 'Noto Sans JP', sans-serif;*/
+    font-family: 'M PLUS Rounded 1c', sans-serif;
     overflow: hidden;
     animation: fadeIn ease 1s;
     -webkit-animation: fadeIn ease 1s;
@@ -81,7 +83,8 @@
   }
 
   h1 {
-    font-size: 36px;
+    font-size: 2.5em;
+    font-weight: 700;
     margin-bottom: 20px;
     color: #ff6699;
   }
@@ -93,10 +96,10 @@
   }
 
   #countdown {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 1.4em;
+    font-weight: 500;
     color: #ff6699;
-    margin-bottom: 2rem;
+    margin-bottom: 2.5rem;
   }
 
   .background {
