横長の場合を実装

--- a/maintenance.html
+++ b/maintenance.html
@@ -105,7 +105,14 @@
 
     /* 背景をぼかす */
     .background img {
-      filter: blur(5px);
+      filter: blur(8px) brightness(0.8);
+    }
+
+    /* 情報を表示するコンテナを右側に表示 */
+    .container {
+      right: 10%;
+      width: 40%;
+      transform: translate(0, -40%);
     }
   }
 
