拡張子変更

--- a/maintenance.html
+++ b/maintenance.html
@@ -242,9 +242,9 @@
   <script>
     // 背景画像のリスト
     var backgroundImages = [
-      'bg_1.jpg',
-      'bg_2.jpg',
-      'bg_3.jpg',
+      'bg_1.png',
+      'bg_2.png',
+      'bg_3.png',
     ];
 
     // メンテナンス終了日時を設定します。ご自身のメンテナンス終了日時に置き換えてください。
