画像の横幅が固定値なことが前提になっていた場所があったので一部修正

--- a/maintenance.html
+++ b/maintenance.html
@@ -99,6 +99,7 @@
 
     .image_container img {
       width: 60%;
+      max-width: 1024px;
       height: auto;
       /*shadow*/
       box-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
@@ -130,6 +131,7 @@
 
     .image_container img {
       width: 100%;
+      max-width: 1024px;
       height: auto;
       /*shadow*/
       box-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
