--- a/maintenance.html
+++ b/maintenance.html
@@ -289,6 +289,6 @@
     });
   </script>
   <!-- ChatGPTとBingAIが作成 -->
-  <p style="position: fixed; bottom: 10px; left: 20px; background-color: #ff6699; padding: 0.8rem; color: #F0F0F0; max-width: 60%; border-radius: 12px; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);">🎨 : BingAI<br>💻 : ChatGPT</p>
+  <p style="position: fixed; bottom: 10px; left: 20px; background-color: #ff6699; padding: 0.8rem; color: #F0F0F0; max-width: 60%; border-radius: 12px; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);">🎨 : BingAI, waifu2x<br>💻 : ChatGPT, わたし</p>
 </body>
 </html>
