リンク修正

--- a/maintenance.html
+++ b/maintenance.html
@@ -259,7 +259,7 @@
     <img src="reload.svg" alt="Reload" width="24" height="24">
   </div>
 
-  <a href="https://github.com" id="github-link">
+  <a href="https://github.com/rca-serv/static-pages" id="github-link">
     <img src="github.png" alt="GitHub">
   </a>
 
