--- a/maintenance.html
+++ b/maintenance.html
@@ -227,13 +227,15 @@
 
   #footer-message {
     position: fixed;
-    bottom: 10px;
-    left: 20px;
-    background-color: #ff6699;
-    padding: 0.8rem;
-    color: #F0F0F0;
+    bottom: 0;
+    left: 0;
+    margin-bottom: 0;
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 1.2rem;
+    color: #4F4F4F;
     max-width: 60%;
-    border-radius: 12px;
+    border-radius: 0 24px 0 0;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   }
 
@@ -316,5 +318,6 @@
   </script>
   <!-- ChatGPTとBingAIが作成 -->
   <p id="footer-message">🎨 : BingAI, waifu2x<br>💻 : ChatGPT, わたし</p>
+
 </body>
 </html>
