--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -199,7 +199,7 @@
     background-color: rgba(255, 255, 255, 0.7);
     padding: 1.2rem;
     border-radius: 24px 0 0 0;
-    transition: background-color 0.3s ease;
+    min-height: 3rem;
   }
 
 
@@ -238,6 +238,7 @@
     max-width: 60%;
     border-radius: 0 24px 0 0;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    min-height: 3rem;
   }
 
 
