--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -198,14 +198,19 @@
     backdrop-filter: blur(5px);
     background-color: rgba(255, 255, 255, 0.7);
     padding: 1.2rem;
+    padding-left: 1.2rem;
     border-radius: 24px 0 0 0;
     min-height: 3rem;
+    /* imageの中央揃え */
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
 
   .fab img {
-    width: 25px;
-    height: 25px;
+    width: 1.6rem;
+    height: 1.6rem;
     /*グレーにするカラーフィルター*/
     filter: invert(30%);
   }
