--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -205,6 +205,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    /* shadow */
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
   }
 
 
@@ -223,6 +226,8 @@
     background-color: rgba(255, 255, 255, 0.7);
     padding: 0.8rem;
     border-radius: 0 0 0 24px;
+    /* shadow */
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
   }
 
   #github-link img {
@@ -242,8 +247,9 @@
     color: #4F4F4F;
     max-width: 60%;
     border-radius: 0 24px 0 0;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
     min-height: 3rem;
+    /* shadow */
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
   }
 
 
