--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -146,7 +146,8 @@
     /* 情報を表示するコンテナを下側に表示 */
     .container {
       width: 80%;
-      transform: translate(-50%, 20%);
+      transform: translate(-50%, 0);
+      bottom: 20%;
     }
   }
 
