--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -147,7 +147,7 @@
     .container {
       width: 80%;
       transform: translate(-50%, 0);
-      bottom: 20%;
+      margin-bottom: 5rem;
     }
   }
 
