--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -145,7 +145,7 @@
 
     /* 情報を表示するコンテナを下側に表示 */
     .container {
-      width: 95%;
+      min-width: 95%;
       transform: translate(-50%, 0);
       margin-bottom: 5rem;
     }
