テキストサイズを可変に

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -165,7 +165,7 @@
   }
 
   #countdown {
-    font-size: 1.4em;
+    font-size: 4.5vw;
     font-weight: 500;
     color: #ff6699;
     margin-bottom: 2.5rem;
