タイマーのテキストサイズを調整

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -149,6 +149,7 @@
       transform: translate(-50%, 0);
       margin-bottom: 5rem;
     }
+
   }
 
   h1 {
@@ -165,7 +166,7 @@
   }
 
   #countdown {
-    font-size: 4.5vw;
+    font-size: clamp(0.8rem, 4.5vw, 1.4rem);
     font-weight: 500;
     color: #ff6699;
     margin-bottom: 2.5rem;
